Fixed flex spacing of main page

--- a/styles.css
+++ b/styles.css
@@ -26,10 +26,11 @@ html {
 
 
 body {
-
   font-family: 'pokemon_gbregular', Arial, sans-serif;
   justify-content: space-between;
   line-height: 1.6;
+  overflow-y: hidden;
+  overflow-x: hidden;
 }
 
 /* attributes */
@@ -46,11 +47,19 @@ body {
 .page {
   height: 100vh;
   width: 100vw;
-  overflow-y: hidden;
-  overflow-x: hidden;
 }
-/* header */
 
+/* intro page */
+.intro {
+  background: var(--squirtle);
+}
+
+/* main page */
+main {
+  justify-content: space-between;
+}
+
+/* header */
 header {
  justify-content: center;
  align-items: center;
